ingress.yaml
#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tp04-ingress
  namespace: tp04
spec:
  rules:
    - host: wordpress.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tp04-service
                port:
                  number: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: tp04-service
  namespace: tp04
spec:
  selector:
    app: tp04
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp04-deployment
  namespace: tp04
spec:
  replicas: 4
  selector:
    matchLabels:
      app: tp04
  template:
    metadata:
      labels:
        app: tp04
    spec:
      containers:
        - name: tp04
          image: registry.cluster.wik.cloud/public/echo
          ports:
          - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
